@@ -1,8 +1,0 @@
-1 entities/pickable_items.png 1 0 -1
-0	16	16	16	8	16	1	1
-
-5 entities/pickable_items.png 1 0 -1
-16	16	16	16	8	16	1	1
-
-10 entities/pickable_items.png 1 0 -1
-32	16	16	16	8	16	1	1
