@@ -1,5 +1,13 @@
 This ChangeLog describes the important changes of each svn commit.
 
+r1433 (2010-09-13):
+
+- Still working on items.
+
+r1432 (2010-09-13):
+
+- Reorganize sprites of items.
+
 r1431 (2010-09-13):
 
 - Fix problems about items.
